@@ -1,0 +1,35 @@
+# Number tests from <n>; usefull to concate several scripts (v1 and v2)
+initialTest=0
+
+# sleep time ms (>=0 enabled; <0 disabled) (v1 and v2)
+sleepTime=-1
+
+# User-Agent (v2 only)
+userAgent=Mozilla/4.1 (compatible; MSIE 6.0; Windows NT 5.0)
+
+# Cookie name, Default is JSESSIONID (v2 only)
+cookieName=JSESSIONID_ECH
+
+# Pattern to identify page where to find cookie value, default is ^.*?home.jsp$ (v2 only)
+#searchedPagePattern=^.*?Accueil.jsp$
+searchedPagePattern=^.*?/$
+
+# display debug information (on|off) (v1 and v2)
+debug=off
+
+# suffix to identify resource, default is .gif;.css;.js;.jpg;.ico (v2 only)
+resources=.gif;.css;.js;.jpg;.ico
+
+# exclude resource or not (on|off) (v2 only)
+excludeResource=on
+
+# relative directory and name of the script file without extension (v1 only)
+scriptFileV1=.\\httpscript
+
+# relative directory and name of the script file without extension (v2 only)
+scriptFileV2=.\\RecordedScenario
+
+# pattern to identify discarded pages (max. 10 patterns) (v2 only)
+discardPattern0=^.*/application;.*?redirectToSamePage=true$
+discardPattern1=^.*?Accueil.jsp$
+discardPattern2=^.*?/$
